5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4477/executions/1575_1332.log
== TEST (2019-03-28 11:36:58) 
-- CODE:
aresta = 5 ** 2
print(aresta)
var1 = (3a)**2
print(var1)
area = 
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 3
    var1 = (3a)**2
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:39:26) 
-- CODE:
area = 3/2 * 3**0.5 * 5**2
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:39:51) 
-- CODE:
area = (3/2) * (3**0.5) * (5**2)
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:39:58) 
-- CODE:
area = (3/2) * (3**0.5) * (5**2)
print(round(area, 4))
-- EXECUTION TIME:
0.178003
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 01:52:53) 
-- CODE:
area = (3/2) * (3**0.5) * (5**2)
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 17:09:52) 
-- CODE:
# Variavel
aresta = 5
# Área do hexágono
A = (3/2) * (3**0.5) * (aresta**2)
# Saida arredondada
print(a, 4)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(a, 4)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 17:09:57) 
-- CODE:
# Variavel
aresta = 5
# Área do hexágono
A = (3/2) * (3**0.5) * (aresta**2)
# Saida arredondada
print(A, 4)
-- OUTPUT:
64.9519052838329 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 17:10:12) 
-- CODE:
# Variavel
aresta = 5
# Área do hexágono
A = (3/2) * (3**0.5) * (aresta**2)
# Saida arredondada
print(round(A, 4)
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 17:10:21) 
-- CODE:
# Variavel
aresta = 5
# Área do hexágono
A = (3/2) * (3**0.5) * (aresta**2)
# Saida arredondada
print(round(A, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 17:10:24) 
-- CODE:
# Variavel
aresta = 5
# Área do hexágono
A = (3/2) * (3**0.5) * (aresta**2)
# Saida arredondada
print(round(A, 4))
-- EXECUTION TIME:
0.140524
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
